# pkg/routes/private_routes.go
@@ -1,14 +1,14 @@
 package routes
 
 import (
-	// "authservice/app/controllers"
-	// "authservice/pkg/middleware"
+	"authservice/app/controllers"
+	"authservice/pkg/middleware"
 
 	"github.com/gofiber/fiber/v2"
 )
 
 func PrivateRoutes(a *fiber.App) {
-	// route := a.Group("/v1")
+	route := a.Group("/v1")
 
-	// route.Put("/uid", middleware.JWTProtected(), controllers.GetUid)
+	route.Get("/refresh", middleware.JWTProtected(), controllers.RefreshToken)
 }
